# reschene-server

./: .gitignore  ARCHITECTURE.md  E2E.md  app.py  cdk.json  pyproject.toml
containers/reconstruction/: Dockerfile  main.py
lambdas/cleanup/: handler.py
lambdas/compaction/: handler.py  requirements.txt
lambdas/image_url/: handler.py
lambdas/metadata_extraction/: handler.py
lambdas/presigned_url/: handler.py
lambdas/reconstruction_judge/: handler.py
lambdas/search/: handler.py
stacks/: reschene_stack.py
tests/: bulk_upload.py  e2e_test.py
